2013-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add support for passing test directories to run-gtk-tests
        https://bugs.webkit.org/show_bug.cgi?id=120296

        Reviewed by Philippe Normand.

        * Scripts/run-gtk-tests:
        (TestRunner._get_tests_from_dir): Helper function to return all
        unit tests found in a given directory.
        (TestRunner._get_tests): Check the given tests passed in the
        command line, so that if a directory is found the tests contained
        in the directory are added to the list of tests to run.

2013-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Improve the stop/reload button implementation in MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=120292

        Reviewed by Philippe Normand.

        - Use an instance member of BrowserWindow for the button widget
          instead of a global variable.
        - Use notify::is-loading to monitor the WebView load instead of
          the estimated-load-progress property.
        - Use webkit_web_view_is_loading() to check whether the view
          is loading to change the button icon instead of a string
          comparison of the gtk stock icon id.
        - Use the right casts to fix compile warning.

        * MiniBrowser/gtk/BrowserWindow.c:
        (reloadOrStopCallback):
        (webViewLoadProgressChanged):
        (webViewIsLoadingChanged):
        (browser_window_init):
        (browserWindowConstructed):

2013-08-26  Arunprasad Rajkumar  <arurajku@cisco.com>

        [Qt] Remove the fix in QWebPage::javaScriptConsoleMessage introduced by (r61433)
        https://bugs.webkit.org/show_bug.cgi?id=119791

        Reviewed by Jocelyn Turcotte.
        
        Load empty url to send onunload event to currently running page. onunload event is 
        mandatory for LayoutTests/plugins/open-and-close-window-with-plugin.html and
        LayoutTests/plugins/geturlnotify-during-document-teardown.html.
