@@ -2690,6 +2690,14 @@
             "forms-bugs@chromium.org"
          ]
       },
+      "Gabor Abraham" : {
+         "emails" : [
+            "abrhm@inf.u-szeged.hu"
+         ],
+         "nicks" : [
+            "abrhm"
+         ]
+      },
       "Gabor Ballabas" : {
          "emails" : [
             "gaborb@inf.u-szeged.hu"
