@@ -1,3 +1,11 @@
+2013-08-26  Zoltan Arvai  <zarvai@inf.u-szeged.hu>
+
+        Adding Gabor Abraham to contributors.json.
+
+        Reviewed by Csaba Osztrogonác.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2013-08-26  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Add support for passing test directories to run-gtk-tests
